--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Festava Live - Bootstrap 5 CSS Template</title>
+    <title>Festava Live</title>
+    <link rel="icon" href="images/icon.png">
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -118,7 +119,7 @@ https://templatemo.com/tm-583-festava-live
                     <div class="col-12 mt-auto mb-5 text-center">
                         <small>Festava Live Presents</small>
 
-                        <h1 class="text-white mb-5">Night Live 2023</h1>
+                        <h1 class="text-white mb-5">Night Live 2025</h1>
 
                         <a class="btn custom-btn smoothscroll" href="#section_2">Let's begin</a>
                     </div>
@@ -127,7 +128,7 @@ https://templatemo.com/tm-583-festava-live
                         <div class="date-wrap">
                             <h5 class="text-white">
                                 <i class="custom-icon bi-clock me-2"></i>
-                                10 - 12<sup>th</sup>, Dec 2023
+                                10 - 12<sup>th</sup>, Aug 2025
                             </h5>
                         </div>
 
@@ -143,19 +144,19 @@ https://templatemo.com/tm-583-festava-live
                                 <span class="text-white me-3">Share:</span>
 
                                 <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link">
+                                    <a href="https://www.facebook.com" class="social-icon-link">
                                         <span class="bi-facebook"></span>
                                     </a>
                                 </li>
 
                                 <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link">
+                                    <a href="https://www.twitter.com" class="social-icon-link">
                                         <span class="bi-twitter"></span>
                                     </a>
                                 </li>
 
                                 <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link">
+                                    <a href="https://www.instagram.com" class="social-icon-link">
                                         <span class="bi-instagram"></span>
                                     </a>
                                 </li>
@@ -181,27 +182,24 @@ https://templatemo.com/tm-583-festava-live
 
                     <div class="col-lg-6 col-12 mb-4 mb-lg-0 d-flex align-items-center">
                         <div class="services-info">
-                            <h2 class="text-white mb-4">About Festava 2022</h2>
+                            <h2 class="text-white mb-4">About Festava 2025</h2>
 
-                            <p class="text-white">Festava Live is free CSS template provided by TemplateMo website. This
-                                layout is built on Bootstrap v5.2.2 CSS library. You are free to use this template for
-                                your commercial website.</p>
+                            <p class="text-white">Festava 2025 is the ultimate summer festival experience, bringing together music lovers from around the world for an unforgettable weekend of live performances, art, and community. Festava is where memories are made.</p>
 
                             <h6 class="text-white mt-4">Once in Lifetime Experience</h6>
 
-                            <p class="text-white">You are not allowed to redistribute the template ZIP file on any other
-                                website without a permission.</p>
+                            <p class="text-white">Festava 2025 offers a unique blend of relaxation and energy. Expect surprise performances, immersive installations, and a vibe that stays with you long after the festival ends.</p>
 
                             <h6 class="text-white mt-4">Whole Night Party</h6>
 
-                            <p class="text-white">Please tell your friends about our website. Thank you.</p>
+                            <p class="text-white">As the sun sets, the real magic begins. Dance under the stars with world-renowned DJs, dazzling light shows, and a crowd that’s ready to celebrate all night long.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-12">
                         <div class="about-text-wrap">
                             <img src="images/pexels-alexander-suhorucov-6457579.jpg" class="about-image img-fluid">
-
+                            
                             <div class="about-text-info d-flex">
                                 <div class="d-flex">
                                     <i class="about-text-icon bi-person"></i>
@@ -257,7 +255,7 @@ https://templatemo.com/tm-583-festava-live
 
                                 <p class="mb-0">
                                     <strong>Youtube Channel:</strong>
-                                    <a href="#">Madona Official</a>
+                                    <a href="https://www.youtube.com/">Madona Official</a>
                                 </p>
                             </div>
                         </div>
@@ -290,7 +288,7 @@ https://templatemo.com/tm-583-festava-live
 
                                 <p class="mb-0">
                                     <strong>Youtube Channel:</strong>
-                                    <a href="#">Rihana Official</a>
+                                    <a href="https://www.youtube.com/">Rihana Official</a>
                                 </p>
                             </div>
                         </div>
@@ -319,7 +317,7 @@ https://templatemo.com/tm-583-festava-live
 
                                 <p class="mb-0">
                                     <strong>Youtube Channel:</strong>
-                                    <a href="#">Bruno Official</a>
+                                    <a href="https://www.youtube.com/">Bruno Official</a>
                                 </p>
                             </div>
                         </div>
@@ -432,7 +430,7 @@ https://templatemo.com/tm-583-festava-live
                 <div class="row">
 
                     <div class="col-lg-8 col-12 mx-auto">
-                        <h2 class="text-center mb-4">Plans, you' love</h2>
+                        <h2 class="text-center mb-4">Plans you'll love</h2>
                     </div>
 
                     <div class="col-lg-6 col-12">
@@ -441,20 +439,20 @@ https://templatemo.com/tm-583-festava-live
                                 <div>
                                     <h3><small>Early Bird</small> $120</h3>
 
-                                    <p>Including good things:</p>
+                                    <p>Includes access to:</p>
                                 </div>
 
                                 <p class="pricing-tag ms-auto">Save up to <span>50%</span></h2>
                             </div>
 
                             <ul class="pricing-list mt-3">
-                                <li class="pricing-list-item">platform for potential customers</li>
+                                <li class="pricing-list-item">All-day festival access</li>
 
-                                <li class="pricing-list-item">digital experience</li>
+                                <li class="pricing-list-item">Exclusive early entry</li>
 
-                                <li class="pricing-list-item">high-quality sound</li>
+                                <li class="pricing-list-item">Main stage performances</li>
 
-                                <li class="pricing-list-item">standard content</li>
+                                <li class="pricing-list-item">High-quality sound and lighting</li>
                             </ul>
 
                             <a class="link-fx-1 color-contrast-higher mt-4" href="ticket.html">
@@ -476,20 +474,20 @@ https://templatemo.com/tm-583-festava-live
                                 <div>
                                     <h3><small>Standard</small> $240</h3>
 
-                                    <p>What makes a premium festava?</p>
+                                    <p>What's included in the full Festava experience:</p>
                                 </div>
                             </div>
 
                             <ul class="pricing-list mt-3">
-                                <li class="pricing-list-item">platform for potential customers</li>
+                                <li class="pricing-list-item">Full weekend festival access</li>
 
-                                <li class="pricing-list-item">digital experience</li>
+                                <li class="pricing-list-item">Priority entry and VIP zone access</li>
 
-                                <li class="pricing-list-item">high-quality sound</li>
+                                <li class="pricing-list-item">Premium stage views</li>
 
-                                <li class="pricing-list-item">premium content</li>
+                                <li class="pricing-list-item">High-quality sound and visuals</li>
 
-                                <li class="pricing-list-item">live chat support</li>
+                                <li class="pricing-list-item">Live chat support and concierge</li>
                             </ul>
 
                             <a class="link-fx-1 color-contrast-higher mt-4" href="ticket.html">
@@ -595,31 +593,31 @@ https://templatemo.com/tm-583-festava-live
                     <div class="col-lg-6 col-12 d-flex justify-content-lg-end align-items-center">
                         <ul class="social-icon d-flex justify-content-lg-end">
                             <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
+                                <a href="https://twitter.com" class="social-icon-link">
                                     <span class="bi-twitter"></span>
                                 </a>
                             </li>
 
                             <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
-                                    <span class="bi-apple"></span>
+                                <a href="https://www.facebook.com" class="social-icon-link">
+                                    <span class="bi-facebook"></span>
                                 </a>
                             </li>
 
                             <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
+                                <a href="https://www.instagram.com" class="social-icon-link">
                                     <span class="bi-instagram"></span>
                                 </a>
                             </li>
 
                             <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
+                                <a href="https://www.youtube.com" class="social-icon-link">
                                     <span class="bi-youtube"></span>
                                 </a>
                             </li>
 
                             <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
+                                <a href="https://www.pinterest.com" class="social-icon-link">
                                     <span class="bi-pinterest"></span>
                                 </a>
                             </li>
@@ -684,7 +682,7 @@ https://templatemo.com/tm-583-festava-live
                     <p class="text-white d-flex mt-3 mb-2">
                         Silang Junction South, Tagaytay, Cavite, Philippines</p>
 
-                    <a class="link-fx-1 color-contrast-higher mt-3" href="#">
+                    <a class="link-fx-1 color-contrast-higher mt-3" href="#section_6"  onclick="showMapTab()">
                         <span>Our Maps</span>
                         <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
                             <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
@@ -703,25 +701,10 @@ https://templatemo.com/tm-583-festava-live
                 <div class="row">
 
                     <div class="col-lg-3 col-12 mt-5">
-                        <p class="copyright-text">Copyright © 2036 Festava Live Company</p>
-                        <p class="copyright-text">Distributed by: <a href="https://themewagon.com">ThemeWagon</a></p>
+                        <p class="copyright-text">Copyright © Festava Live Company</p>
                     </div>
 
-                    <div class="col-lg-8 col-12 mt-lg-5">
-                        <ul class="site-footer-links">
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Terms &amp; Conditions</a>
-                            </li>
-
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Privacy Policy</a>
-                            </li>
-
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Your Feedback</a>
-                            </li>
-                        </ul>
-                    </div>
+                   
                 </div>
             </div>
         </div>
@@ -739,6 +722,13 @@ T e m p l a t e M o
     <script src="js/jquery.sticky.js"></script>
     <script src="js/click-scroll.js"></script>
     <script src="js/custom.js"></script>
+
+    <script>
+        function showMapTab() {
+            var mapTab = new bootstrap.Tab(document.querySelector('#nav-ContactMap-tab'));
+            mapTab.show();
+        }
+    </script>
 
 </body>
 
