--- a/ticket.html
+++ b/ticket.html
@@ -123,7 +123,7 @@ https://templatemo.com/tm-583-festava-live
                                 </div>
 
                                 <input type="tel" class="form-control" name="ticket-form-phone"
-                                    placeholder="Ph 085-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required="">
+                                    placeholder="049 123 456" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required="">
 
                                 <h6>Choose Ticket Type</h6>
 
@@ -150,7 +150,7 @@ https://templatemo.com/tm-583-festava-live
                                 </div>
 
                                 <input type="number" name="ticket-form-number" id="ticket-form-number"
-                                    class="form-control" placeholder="Number of Tickets" required>
+                                    class="form-control" placeholder="Number of Tickets" min="1" max="10" required>
 
                                 <textarea name="ticket-form-message" rows="3" class="form-control"
                                     id="ticket-form-message" placeholder="Additional Request"></textarea>
